Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126784

QQuickWindow::graphicsConfiguration() documentation wrong

XMLWordPrintable

    • de2247770 (dev), 8f2b6d92c (6.8), b339b073f (tqtc/lts-6.5), 46fb5a0be (tqtc/lts-6.2)
    • DaVinci 105

      The section QQuickWindow::graphicsConfiguration() contains a copy of the documentation of QQuickWindow::graphicsDevice()

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andreas.eliasson Andreas Eliasson
            jrade Johan RĂ¥de
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: