Doc: Change description for QQuickWindow::graphicsConfiguration()

It seems the current description has been copied from
QQuickWindow::graphicsDevice().

Fixes: QTBUG-126784
Pick-to: 6.7 6.5 6.2
Change-Id: Ia52a6f7cd8e082e07b8cc8d59c345d4e2508aa19
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit de22477708ed3700d2f36d0121008b1cac4b837e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>